enhance test coverage
